force-app/main/default/objects/Account/fields/Insurance_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiration__c</fullName>
    <label>Insurance Expiration</label>
    <type>Date</type>
</CustomField>