force-app/main/default/objects/Account/fields/Supplier_Tier__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Tier__c</fullName>
    <label>Supplier Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>