force-app/main/default/objects/Account/recordTypes/Commercial_Customer.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Customer</fullName>
    <label>Commercial Customer</label>
    <active>true</active>
</RecordType>