force-app/main/default/objects/Account/recordTypes/Operator.recordType-meta.xml
<RecordType>
    <fullName>Operator</fullName>
    <label>Operator</label>
    <active>true</active>
</RecordType>