force-app/main/default/objects/Account/recordTypes/Partner_JV.recordType-meta.xml
<RecordType>
    <fullName>Partner_JV</fullName>
    <label>Partner/JV</label>
    <active>true</active>
</RecordType>