force-app/main/default/objects/Account/recordTypes/Regulatory_Agency.recordType-meta.xml
<RecordType>
    <fullName>Regulatory_Agency</fullName>
    <label>Regulatory Agency</label>
    <active>true</active>
</RecordType>