force-app/main/default/objects/Account/recordTypes/Retail_Customer.recordType-meta.xml
<RecordType>
    <fullName>Retail_Customer</fullName>
    <label>Retail Customer</label>
    <active>true</active>
</RecordType>