force-app/main/default/objects/Account/recordTypes/Supplier_Vendor.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Vendor</fullName>
    <label>Supplier/Vendor</label>
    <active>true</active>
</RecordType>